# state-of-webassembly

./: .gitignore  README.md  index.html  package-lock.json  package.json
demos/fastly-edge/: Cargo.toml
demos/fastly-edge/src/: main.rs
demos/wasi-security/: Cargo.toml
demos/wasi-security/src/: main.rs
demos/wordcloud/: .prettierignore  index.html  package-lock.json  package.json
demos/wordcloud/src/: main.ts  style.css
demos/wordcloud/src/word-cloud/: bindings.ts
demos/wordcloud/wasm/: Cargo.toml
docs/: index.html
docs/assets/: index.719d12ae.js  index.9ccd1a13.css  index.a780d604.css  index.b265bedf.js  index.da6fc426.js
docs/chapters/: chapter1.html  chapter2.html  chapter3.html  chapter4.html  chapter5.html  chapter6.html
fastly-edge/: README.md  fastly.toml
slides/: copyBuild.mjs  index.html  package-lock.json  package.json
slides/src/: chapters.js  index.css  index.js  zuehlke-chapter.css  zuehlke-toc.css
slides/src/chapters/: 01.html  02.html  03.html  04.html  05.html  06.html  07.html  toc.html
src/: bindings.ts  main.ts  style.css
src/word-cloud/: cloud.ts  data.ts  drag-drop-handler.ts  handler.ts  processing.ts
wasm/: Cargo.toml
wasm/src/: bindings.rs  lib.rs  preprocessing.rs  processing.rs
