[package]
name = "wordcloud-combined"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.56"
regex = { version = "1.5.4", features = ["perf", "perf-dfa"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }

[profile.release]
opt-level = 3
lto = true
#debug = true
#
## `wasm-opt` is on by default in for the release profile, but it can be
## disabled by setting it to `false`
#[package.metadata.wasm-pack.profile.release]
#wasm-opt = false
#
#[package.metadata.wasm-pack.profile.release.wasm-bindgen]
#debug-js-glue = true
#demangle-name-section = true
#dwarf-debug-info = true
